# vita-wifi-analyzer

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.claude-octopus/: state.json
docs/: extensions.md
scripts/: build_and_bump.sh  deploy_ftp.sh
src/: alert_rules.c  alert_rules.h  alerts.c  alerts.h  bt_monitor.c  bt_monitor.h  bt_store.c  bt_store.h  discovery.c  discovery.h  export_json.c  export_json.h  export_viewer.c  export_viewer.h  host_tools.c  host_tools.h  lan_scanner.c  lan_scanner.h  latency_probe.c  latency_probe.h  main.c  net_monitor.c  net_monitor.h  nfc_scanner.c  nfc_scanner.h  proxy_client.c  proxy_client.h  render.c  render.h  scan_history.c  scan_history.h  service_probe.c  service_probe.h  ui_audio.c  ui_audio.h  ui_fx.c  ui_fx.h  wifi_scanner.c  wifi_scanner.h
